--- a/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
@@ -85,7 +85,7 @@
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a asp-controller="Course" asp-action="CreateCourse">Add new course</a></li>
-                            <li><a asp-controller="Course" asp-action="GetAllActive">Active Course</a></li>
+                            <li><a asp-controller="Course" asp-action="GetAllCoursesByInstructorId">Active Course</a></li>
 
                             <li><a asp-controller="Course" asp-action="GetAllInActive">View all inactive instructors</a></li>
 
