--- a/EasyLearn/Views/Admin/RegisterAdmin.cshtml
+++ b/EasyLearn/Views/Admin/RegisterAdmin.cshtml
@@ -63,7 +63,10 @@
 
                 <div class="form-group">
                     <label for="file">Choose file</label>
-                    <input type="file" name="formFile" id="formFile" />
+                    <input type="file" name="formFile" id="formFile" accept=".png, .jpg, .jpeg" />
+                    <!--
+                    <input type="file" name="formFile" id="formFile" accept="image/png, image/jpeg, image/png" />
+                    -->
                 </div>
 
                 <div class="form-group">
