--- a/EasyLearn/Views/Category/Create.cshtml
+++ b/EasyLearn/Views/Category/Create.cshtml
@@ -28,7 +28,7 @@
             <div class="form-group">
                 @Html.LabelFor(x => x.FormFile, new { @class = "" })
                 @*<label for="file">Choose file</label>*@
-                <input type="file" name="formFile" id="formFile" />
+                <input type="file" name="formFile" id="formFile" accept=".png, .jpg, .jpeg" />
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
