--- a/EasyLearn/Views/Course/CreateCourse.cshtml
+++ b/EasyLearn/Views/Course/CreateCourse.cshtml
@@ -94,7 +94,7 @@
 
             <div class="form-group">
                 <label for="file">Choose file</label>
-                <input type="file" name="formFile" id="formFile" />
+                <input type="file" name="formFile" id="formFile" accept=".png, .jpg, .jpeg" />
             </div>
 
             <div class="form-group">
