--- a/EasyLearn/Views/Course/GetAllCoursesByInstructorId.cshtml
+++ b/EasyLearn/Views/Course/GetAllCoursesByInstructorId.cshtml
@@ -1,9 +1,9 @@
 ﻿@model EasyLearn.Models.DTOs.CourseDTOs.CoursesRequestModel
 
 @{
-    ViewBag.Title = "Customers";
-    ViewBag.pTitle = "Customers";
-    ViewBag.pageTitle = "Ecommerce";
+    //ViewBag.Title = "Customers";
+    //ViewBag.pTitle = "Customers";
+    //ViewBag.pageTitle = "Ecommerce";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -61,10 +61,10 @@
                                     <td>@item.Price</td>
                                     <td>@item.DifficultyLevel</td>
 
-                                    @*https://localhost:7143/Module/GetAllByCourseId?courseId=28aa95ff-6f08-4fae-8d38-6681a38fee4f*@
+                                    @*https://localhost:7143/Module/GetAllByCourseId?courseId=28aa95ff-6f08-4fae-8d38-6681a38fee4f*@ 
                                    
                                     <td id="tooltip-container1">
-                                        <a asp-controller="Course" asp-action="GetAllByCourseId" asp-route-id="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><i class="mdi mdi-pencil font-size-18"></i></a>
+                         <a asp-controller="Module" asp-action="GetAllByCourseId" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><i class="mdi mdi-pencil font-size-18"></i></a>
 
                                         <a href="javascript:void(0);" class="text-danger" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><i class="mdi mdi-trash-can font-size-18"></i></a>
                                     </td>
