getting all course enrolled

--- a/EasyLearn/Views/Course/GetAll.cshtml
+++ b/EasyLearn/Views/Course/GetAll.cshtml
@@ -50,7 +50,7 @@
                             </td>
 
                             <td>
-                                <a asp-controller="Enrolment" asp-action="Create" asp-route-id="@item.Id" class="btn btn-success">Enroll</a>
+                                <a asp-controller="Enrolment" asp-action="Create" asp-route-courseId="@item.Id" class="btn btn-success">Enroll</a>
                             </td>
                             
                             <td>
