--- a/EasyLearn/Views/Shared/_Layout.cshtml
+++ b/EasyLearn/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <partial name="~/Views/Shared/_title_meta.cshtml" />
     @RenderSection("styles", false)
     <partial name="~/Views/Shared/_head_css.cshtml" />
-
+    <link rel="stylesheet" href="~/css/Custom.css">    
 
 </head>
 
