--- a/EasyLearn/Views/Enrolment/Create.cshtml
+++ b/EasyLearn/Views/Enrolment/Create.cshtml
@@ -18,11 +18,19 @@
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <input asp-for="CourseId" class="form-control" />
-            
+            <input asp-for="CourseId" class="form-control" type="hidden" />
+
+
+            <div class="form-group">
+                <label asp-for="CourseName" class="control-label"></label>
+                <input asp-for="CourseName" class="form-control" readonly />
+                <span asp-validation-for="CourseName" class="text-danger"></span>
+            </div>
+
+
             <div class="form-group">
                 <label asp-for="AmountPaid" class="control-label"></label>
-                <input asp-for="AmountPaid" class="form-control" />
+                <input asp-for="AmountPaid" class="form-control" readonly />
                 <span asp-validation-for="AmountPaid" class="text-danger"></span>
             </div>
 
@@ -33,6 +41,7 @@
                 <span asp-validation-for="Coupon" class="text-danger"></span>
             </div>
 
+          
 
             <div class="form-group">
                 @Html.LabelFor(x => x.PaymentMethods, new {@class = "control-label"})
