--- a/EasyLearn/Views/Home/Login.cshtml
+++ b/EasyLearn/Views/Home/Login.cshtml
@@ -8,20 +8,22 @@
 
 <h1>Login</h1>
 
-<h4>Enter valid login details</h4>
+@*<h4>Enter valid login details</h4>
 <hr />
 <div class="row">
+
     <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
-                <label asp-for="Email" class="control-label" ></label>
-                <input asp-for="Email" class="form-control" />
+                                                
+                <label asp-for="Email" class="control-label" > <i class="mdi mdi-account mdi-dark"></i> Username / Email</label>
+                <input asp-for="Email" class="form-control" placeholder="Enter valid email or username"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"  class="control-label"></label>
+                <label asp-for="Password" class="control-label"><i class="mdi mdi-account-key mdi-dark"></i> Password</label>
                 <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
@@ -45,3 +47,94 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+*@
+
+
+
+
+
+
+
+
+
+
+
+
+@{
+    //ViewData["Title"] = "Login";
+    Layout = "~/Views/Shared/_BlankLayout.cshtml";
+}
+
+<div>
+    <div class="container-fluid p-0">
+        <div class="row g-0">
+            <div class="col-lg-4">
+                <div class="authentication-page-content p-4 d-flex align-items-center min-vh-100">
+                    <div class="w-100">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-9">
+                                <div>
+                                    <div class="text-center">
+                                        <div>
+                                            <a asp-controller="Course" asp-action="index" class="">
+                                                <img src="/uploads/Logos/logo.jpg" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                                <img src="/uploads/Logos/logo.jpg" alt="" height="20" class="auth-logo logo-light mx-auto">
+                                            </a>
+                                        </div>
+
+                                        <h4 class="font-size-18 mt-4">Welcome Back !</h4>
+                                        <p class="text-muted">Sign in to continue to EasyLearn.</p>
+                                    </div>
+
+                                    <div class="p-2 mt-5">
+                                        <form class="" asp-action="Login">
+
+                                            <div class="mb-3 auth-form-group-custom mb-4">
+                                                <i class="ri-user-2-line auti-custom-input-icon"></i>
+                                                <label for="username">Username/Email</label>
+                                                <input type="text" class="form-control" id="username" name="Email" placeholder="Enter username or Email">
+                                            </div>
+
+                                            <div class="mb-3 auth-form-group-custom mb-4">
+                                                <i class="ri-lock-2-line auti-custom-input-icon"></i>
+                                                <label for="userpassword">Password</label>
+                                                <input type="password" class="form-control" id="userpassword" name="Password" placeholder="Enter password">
+                                            </div>
+
+                                            <div class="form-check">
+                                                <input type="checkbox" class="form-check-input" id="customControlInline">
+                                                <label class="form-check-label" for="customControlInline">Remember me</label>
+                                            </div>
+
+                                            <div class="mt-4 text-center">
+                                                <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Log In</button>
+                                            </div>
+
+                                            <div class="mt-4 text-center">
+                                                <a asp-controller="Home" asp-action="ResetPassword" class="text-muted"><i class="mdi mdi-lock me-1"></i> Forgot your password?</a>
+                                            </div>
+                                        </form>
+                                    </div>
+
+                                    <div class="mt-5 text-center">
+                                        <p>Don't have an account ? <a asp-controller="Student" asp-action="RegisterStudent" class="fw-medium text-primary"> Register </a> </p>
+                                        <p>
+                                            ©
+                                            <script>document.write(new Date().getFullYear())</script> Treehays. Crafted with <i class="mdi mdi-heart text-danger"></i> by S3m1c0lon
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="authentication-bg">
+                    <div class="bg-overlay"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
