--- a/EasyLearn/Views/Shared/_Adminsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Adminsidebar.cshtml
@@ -112,6 +112,25 @@
                         </ul>
                     </li>
 
+                      <!--Manage role -->
+                    <li>
+                        <a href="javascript: void(0);" class="has-arrow waves-effect">
+                            <i class="ri-chat-2-line"></i>
+                            <span>Manage roles</span>
+                        </a>
+                        <ul class="sub-menu" aria-expanded="false">
+                            <li><a asp-controller="Role" asp-action="Create">Add new role</a></li>
+
+                            <li><a asp-controller="Admin" asp-action="UpgradeUser">Upgrade user</a></li>
+
+                            <li><a asp-controller="Student" asp-action="Inactivestudent">Available roles</a></li>
+
+
+
+
+                        </ul>
+                    </li>
+
 
 
                     <!--Manage courses\ -->
