done with firts enrolment

--- a/EasyLearn/Views/Admin/UpgradeUser.cshtml
+++ b/EasyLearn/Views/Admin/UpgradeUser.cshtml
@@ -87,7 +87,7 @@
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                             New role
                             <span>
-                                <input type="hidden" id="UserId" value="@Model.Data.UserId" name="UserId" class="" />
+                                <input type="hidden" id="UserId" value="@Model.Data.Id" name="UserId" class="" />
                                 <select asp-for="Data.RoleId" asp-items="ViewBag.roles" name="RoleId" required multiple> <option value="" selected>--Select Role--</option></select>
                             </span>
                             @*<span><input type="number" id="" class="" /></span>*@
