--- a/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
@@ -89,9 +89,7 @@
 
                             <li><a asp-controller="Course" asp-action="GetAllInActive">View all inactive instructors</a></li>
 
-                            <li><a asp-controller="Course" asp-action="">Moderate instructor</a></li>
 
-                            <li><a asp-controller="Course" asp-action="">instructors bank details</a></li>
                         </ul>
                     </li>
 
@@ -146,6 +144,8 @@
                             <li><a asp-controller="" asp-action="">Profile Update</a></li>
                             <li><a asp-controller="" asp-action="">Change Password</a></li>
                             <li><a asp-controller="" asp-action="">My Wallet</a></li>
+                            <li><a asp-controller="" asp-action="">Bank Account Details</a></li>
+                            <li><a asp-controller="" asp-action="">Moderate instructor</a></li>
 
                         </ul>
                     </li>
